# chat_client_server

./: Cargo.toml
src/: client.rs  lib.rs  server.rs
src/client/: client_command_handling.rs  client_message_handling.rs  mod.rs
src/server/: mod.rs  server_message_handling.rs
